--- a/src/main/webapp/css/app.css
+++ b/src/main/webapp/css/app.css
@@ -4,7 +4,7 @@ body {
 	height: 100%;
 	width: 100%;
 	background-color: WhiteSmoke;
-	position: absolute;
+	position: relative;
 }
 
 /* jquery ui css stuff ----------------- */
