--- a/WebContent/css/app.css
+++ b/WebContent/css/app.css
@@ -4,7 +4,7 @@ body {
 	height: 100%;
 	width: 100%;
 	background-color: WhiteSmoke;
-	position: relative;
+	position: absolute;
 }
 
 /* jquery ui css stuff ----------------- */
